Change seccomp support to libseccomp

--- a/configure.ac
+++ b/configure.ac
@@ -32,9 +32,6 @@ echo Checking for required header files
 AC_HEADER_STDC
 AC_CHECK_HEADER(sys/fanotify.h, , [AC_MSG_ERROR(
 ["Couldn't find sys/fanotify.h...your kernel might not be new enough"] )])
-AC_CHECK_HEADER(linux/seccomp.h, , [AC_MSG_WARN(
-["Couldn't find linux/seccomp.h...seccomp filter will not be used"] )])
-AC_CHECK_DECLS([SECCOMP_MODE_FILTER], [], [], [[#include <linux/seccomp.h>]])
 AC_CHECK_DECLS([PR_SET_NO_NEW_PRIVS], [], [AC_MSG_WARN(
 ["Couldn't find PR_SET_NO_NEW_PRIVS...privilege escalation might be possible"] )
 ], [[#include <linux/prctl.h>]])
@@ -48,6 +45,7 @@ AC_CHECK_LIB(rpm, rpmtsInitIterator, , [AC_MSG_ERROR([librpm not found])], -lrpm
 AC_CHECK_LIB(rpmio, rpmFreeCrypto, , [AC_MSG_ERROR([librpmio not found])], -lrpmio)
 AC_CHECK_LIB(magic, magic_descriptor, , [AC_MSG_ERROR([libmagic not found])], -lmagic)
 AC_CHECK_LIB(cap-ng, capng_change_id, , [AC_MSG_ERROR([libcap-ng not found])], -lcap-ng)
+AC_CHECK_LIB(seccomp, seccomp_rule_add, , [AC_MSG_ERROR([libseccomp not found])], -lseccomp)
 
 AC_OUTPUT(Makefile src/Makefile init/Makefile doc/Makefile)
 
