Add more error checking

--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -2,10 +2,10 @@
 # This file controls the configuration of the file access policy daemon
 #
 
-permissive = 0;
-nice_val = 10;
-q_size = 1024;
+permissive = 0
+nice_val = 10
+q_size = 1024
 uid = fapolicyd
 gid = fapolicyd
-details = 1;
+details = 1
 
