--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -7,5 +7,8 @@ nice_val = 10
 q_size = 1024
 uid = fapolicyd
 gid = fapolicyd
-details = 1
+do_stat_report = 1
+detailed_report = 1
 db_max_size = 250
+subj_cache_size = 1024
+obj_cache_size = 4096
