Added possibility to sync trustdb with updated rpmdb
It is possible to detect an dnf update and sync our trust
database with new rpmdb.

- Added dnf plugin subpackage
- Added fapolicy CLI tool

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 
 SUBDIRS = src init doc 
-EXTRA_DIST = ChangeLog AUTHORS NEWS README.md INSTALL fapolicyd.spec doc/uml/fapolicyd.xmi doc/uml/README autogen.sh
+EXTRA_DIST = ChangeLog AUTHORS NEWS README.md INSTALL fapolicyd.spec dnf/fapolicyd-dnf-plugin.py doc/uml/fapolicyd.xmi doc/uml/README autogen.sh
 
 clean-generic:
 	rm -rf autom4te*.cache 
