--- a/init/Makefile.am
+++ b/init/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = fapolicyd.rules  fapolicyd.mounts fapolicyd.service fapolicyd.conf fapolicyd-tmpfiles.conf
+EXTRA_DIST = fapolicyd.rules  fapolicyd.service fapolicyd.conf fapolicyd-tmpfiles.conf
 fapolicyddir = $(sysconfdir)/fapolicyd
 dist_fapolicyd_DATA = fapolicyd.rules fapolicyd.conf
 systemdservicedir = $(systemdsystemunitdir)
