Make the watched filesystems configurable
Currently, the filesystems that are watched are hardcoded to be xfs,tmpfs,
ext4,ext3,ext2. This is not configurable. So, if someone needs to watch
something based on dosfs, they have no way to do it.

This change introduces a new fapolicyd.conf option, watch_fs, so that the
end user may specify precisely which filesystems to watch. This list is
used for dynamic mountpoint inclusion when a hotplug mount event occurs.

The design is to use a AVL tree since loading the filesystems occurs once
and then it may need to be searched many times. An AVL tree should give
superior performance compared to a simple linked list.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ fapolicyd_LDADD = -lpthread
 fapolicyd_cli_CFLAGS = $(fapolicyd_CFLAGS)
 fapolicyd_cli_LDFLAGS = $(fapolicyd_LDFLAGS)
 
-fapolicyd_SOURCES = database.c daemon-config.c event.c \
+fapolicyd_SOURCES = avl.c database.c daemon-config.c event.c \
 	fapolicyd.c fd-fgets.c file.c lru.c message.c \
 	mounts.c notify.c object-attr.c object.c \
 	policy.c process.c queue.c rules.c \
@@ -16,7 +16,7 @@ fapolicyd_SOURCES = database.c daemon-config.c event.c \
 
 fapolicyd_cli_SOURCES = fapolicyd-cli.c
 
-noinst_HEADERS = database.h daemon-config.h event.h \
+noinst_HEADERS = avl.h database.h daemon-config.h event.h \
 	fd-fgets.h file.h lru.h message.h mounts.h notify.h \
 	nv.h object-attr.h object.h policy.h \
 	process.h queue.h rules.h subject-attr.h subject.h \
