--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -1,5 +1,6 @@
 #
-# This file controls the configuration of the file access policy daemon
+# This file controls the configuration of the file access policy daemon.
+# See the fapolicyd.conf man page for explanation.
 #
 
 permissive = 0
