Switchable trust back-ends
- rpmdb
- admin defined list

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -22,5 +22,9 @@
 
 EXTRA_DIST = $(man_MANS)
 
-man_MANS = fapolicyd.8 fapolicyd-cli.1 fapolicyd.rules.5 fapolicyd.conf.5
-
+man_MANS = \
+	fapolicyd.8 \
+	fapolicyd-cli.1 \
+	fapolicyd.rules.5 \
+	fapolicyd.trust.5 \
+	fapolicyd.conf.5
