--- a/init/Makefile.am
+++ b/init/Makefile.am
@@ -1,5 +1,16 @@
-EXTRA_DIST = fapolicyd.rules  fapolicyd.service fapolicyd.conf fapolicyd-tmpfiles.conf
+EXTRA_DIST = \
+	fapolicyd.rules \
+	fapolicyd.service \
+	fapolicyd.conf \
+	fapolicyd.trust \
+	fapolicyd-tmpfiles.conf
+
 fapolicyddir = $(sysconfdir)/fapolicyd
-dist_fapolicyd_DATA = fapolicyd.rules fapolicyd.conf
+
+dist_fapolicyd_DATA = \
+	fapolicyd.rules \
+	fapolicyd.conf \
+	fapolicyd.trust
+
 systemdservicedir = $(systemdsystemunitdir)
 dist_systemdservice_DATA = fapolicyd.service
