--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -14,4 +14,4 @@ db_max_size = 250
 subj_cache_size = 1024
 obj_cache_size = 6144
 watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
-trust = rpmdb,files
+trust = rpmdb,file
