Add file size based integrity check
This patch starts to land integrity checking schemes. This first one
is the fastest and provides a small amount of integrity checking.
It really is to detect accidental overwrites rather that anything more
serious.

--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -15,3 +15,4 @@ subj_cache_size = 1549
 obj_cache_size = 8191
 watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
 trust = rpmdb,file
+integrity = none
