--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AM_CONFIG_HEADER(config.h)
 AC_CONFIG_MACRO_DIR([m4])
 
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE(foreign subdir-objects)
 AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
