--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -17,3 +17,4 @@ watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
 trust = rpmdb,file
 integrity = none
 syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype
+allow_filename_trail_spaces = 0
