--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -16,4 +16,4 @@ obj_cache_size = 8191
 watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
 trust = rpmdb,file
 integrity = none
-syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype
+syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype,trust
