--- a/.github/workflows/centos-build.yml
+++ b/.github/workflows/centos-build.yml
@@ -2,9 +2,9 @@ name: centos-build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
