--- a/.github/workflows/stable-fedora-build.yml
+++ b/.github/workflows/stable-fedora-build.yml
@@ -2,9 +2,9 @@ name: stable-fedora-build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
