Implement escaping capability
- content of the trust file needs to be escaped
- problematic characters [in file name] are ususally whitespaces
- '%' char is used for escaping

- escape sequence looks like following: "%3A" which stands for 1 byte
where '3' stands for higher 4 bits in hex and 'A' stands for lower 4
bits of the byte, space can be escaped as "%20" and '%' is "%25"

Signed-off-by: Radovan Sroka <rsroka@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,8 @@ libfapolicyd_la_SOURCES = \
 	library/conf.h \
 	library/database.c \
 	library/database.h \
+	library/escape.c \
+	library/escape.h \
 	library/event.c \
 	library/event.h \
 	library/fapolicyd-defs.h \
