Add support for rules.d directory
Currently fapolicyd has its rules in one monolithic rules file. This
makes it hard to add units of policy based on software installed on the
machine. This patch adds a rules.d directory and a utility that compiles
the master rules file out of component files in rules.d.

It maintains backwards compatibility with the old rules file. If the new
compiled.rules file is not found, it opens the old one if it exists.

--- a/init/Makefile.am
+++ b/init/Makefile.am
@@ -5,7 +5,8 @@ EXTRA_DIST = \
 	fapolicyd.conf \
 	fapolicyd.trust \
 	fapolicyd-tmpfiles.conf \
-	fapolicyd-magic
+	fapolicyd-magic \
+	fagenrules
 
 fapolicyddir = $(sysconfdir)/fapolicyd
 
@@ -16,7 +17,7 @@ dist_fapolicyd_DATA = \
 systemdservicedir = $(systemdsystemunitdir)
 dist_systemdservice_DATA = fapolicyd.service
 
-
+sbin_SCRIPTS = fagenrules
 
 MAGIC = fapolicyd-magic.mgc
 pkgdata_DATA = ${MAGIC} fapolicyd.rules.known-libs fapolicyd.rules.restrictive
