--- a/rules.d/Makefile.am
+++ b/rules.d/Makefile.am
@@ -1,5 +1,5 @@
 # Makefile.am --
-# Copyright 2016,2018 Red Hat Inc., Durham, North Carolina.
+# Copyright 2021 Red Hat Inc.
 # All Rights Reserved.
 #
 # This program is free software; you can redistribute it and/or modify
@@ -13,19 +13,18 @@
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# along with this program; see the file COPYING. If not, write to the
+# Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor 
+# Boston, MA 02110-1335, USA.
 #
 # Authors:
 #   Steve Grubb <sgrubb@redhat.com>
 #
 
-EXTRA_DIST = $(man_MANS)
+CONFIG_CLEAN_FILES = *.rej *.orig
 
-man_MANS = \
-	fapolicyd.8 \
-	fagenrules.8 \
-	fapolicyd-cli.1 \
-	fapolicyd.rules.5 \
-	fapolicyd.trust.5 \
-	fapolicyd.conf.5
+EXTRA_DIST = README-rules
+
+rulesdir = $(datadir)/fapolicyd/sample-rules
+dist_rules_DATA = $(EXTRA_DIST)
+
