Reorder loop holes with patterns in rules.d
- this keeps backwards compatibility with older wersions of rules
- the ld_so pattern was applied to root
- it caused problems with running ldd as root(previously unrestricted)

Signed-off-by: Radovan Sroka <rsroka@redhat.com>

--- a/rules.d/Makefile.am
+++ b/rules.d/Makefile.am
@@ -23,8 +23,8 @@
 
 CONFIG_CLEAN_FILES = *.rej *.orig
 
-EXTRA_DIST = README-rules 10-languages.rules 20-patterns.rules \
-	30-dracut.rules 30-updaters.rules \
+EXTRA_DIST = README-rules 10-languages.rules 20-dracut.rules \
+	21-updaters.rules 30-patterns.rules \
 	40-bad-elf.rules 41-shared-obj.rules 42-trusted-elf.rules \
 	43-known-elf.rules \
 	70-trusted-lang.rules 71-known-python.rules 72-shell.rules \
