--- a/init/fapolicyd.service
+++ b/init/fapolicyd.service
@@ -5,6 +5,7 @@ After=local-fs.target systemd-tmpfiles-setup.service
 Documentation=man:fapolicyd(8)
 
 [Service]
+OOMScoreAdjust=1000
 Type=forking
 PIDFile=/run/fapolicyd.pid
 ExecStartPre=/usr/sbin/fagenrules
