--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -13,7 +13,7 @@ detailed_report = 1
 db_max_size = 50
 subj_cache_size = 1549
 obj_cache_size = 8191
-watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
+watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660,btrfs
 trust = rpmdb,file
 integrity = none
 syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype,trust
