Introduce filtering of rpmdb
- this feature introduces very flexible filter syntax
- original filter was compiled in so this is very useful
- filter needs to keep a minimal set of files that will be excuted
  on the system eventually
- all the configuration can be done in /etc/fapolicyd/rpm-filter.conf

Signed-off-by: Radovan Sroka <rsroka@redhat.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -28,4 +28,5 @@ man_MANS = \
 	fapolicyd-cli.1 \
 	fapolicyd.rules.5 \
 	fapolicyd.trust.5 \
-	fapolicyd.conf.5
+	fapolicyd.conf.5 \
+	rpm-filter.conf.5
