--- a/init/Makefile.am
+++ b/init/Makefile.am
@@ -1,6 +1,7 @@
 EXTRA_DIST = \
 	fapolicyd.service \
 	fapolicyd.conf \
+	rpm-filter.conf \
 	fapolicyd.trust \
 	fapolicyd-tmpfiles.conf \
 	fapolicyd-magic \
@@ -11,6 +12,7 @@ fapolicyddir = $(sysconfdir)/fapolicyd
 
 dist_fapolicyd_DATA = \
 	fapolicyd.conf \
+	rpm-filter.conf \
 	fapolicyd.trust
 
 systemdservicedir = $(systemdsystemunitdir)
