--- a/init/fapolicyd.service
+++ b/init/fapolicyd.service
@@ -6,6 +6,7 @@ Documentation=man:fapolicyd(8)
 
 [Service]
 OOMScoreAdjust=-1000
+LimitNOFILE=16384
 Type=forking
 PIDFile=/run/fapolicyd.pid
 ExecStartPre=/usr/sbin/fagenrules
