Fix uncomplete 331a38ecb24e17afe5914418289fe3b4b14822c5
- filter file renaming went wrong
- fix the name of the files corectly and update also makefiles

Signed-off-by: Radovan Sroka <rsroka@redhat.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -29,4 +29,5 @@ man_MANS = \
 	fapolicyd.rules.5 \
 	fapolicyd.trust.5 \
 	fapolicyd.conf.5 \
-	fapolicyd.filter.5
+	rpm-filter.conf.5 \
+	fapolicyd-filter.conf.5
