Add RuntimeDirectory to the systemd service file

--- a/init/fapolicyd.service
+++ b/init/fapolicyd.service
@@ -7,6 +7,7 @@ Documentation=man:fapolicyd(8)
 [Service]
 OOMScoreAdjust=-1000
 Type=forking
+RuntimeDirectory=fapolicyd
 PIDFile=/run/fapolicyd.pid
 ExecStartPre=/usr/sbin/fagenrules
 ExecStart=/usr/sbin/fapolicyd
