Add ebuild backend
This commit introduces a new backend for handling Gentoo ebuilds via the
paortage var database (VDB), allowing fapolicyd to trust files managed
by the Portage package manager. The implementation is modeled after the
existing Debian (MD5) and RPM backends.

Key changes:
- Implemented `ebuild-backend` to ingest trust data from the ebuild VDB.
- Integrated the new backend into the backend manager and database structures.
- Added OpenRC init scripts (`init.d` and `conf.d`) to support
  Gentoo and other non-systemd environments.
- Updated the build system to exclude OpenRC files when building RPMs.

This enables fapolicyd to function on Gentoo-based systems by
automatically trusting installed packages.

Signed-off-by: Matt Jolly <kangie@gentoo.org>

--- a/init/Makefile.am
+++ b/init/Makefile.am
@@ -1,8 +1,10 @@
 EXTRA_DIST = \
-	fapolicyd.service \
-	fapolicyd.conf \
-	fapolicyd-filter.conf \
-	fapolicyd.trust \
+	data/fapolicyd-filter.conf \
+	data/fapolicyd.conf \
+	data/fapolicyd.trust \
+	openrc/conf.d/fapolicyd \
+	openrc/init.d/fapolicyd \
+	systemd/fapolicyd.service \
 	fapolicyd-tmpfiles.conf \
 	fapolicyd-magic \
 	fapolicyd.bash_completion \
@@ -11,12 +13,17 @@ EXTRA_DIST = \
 fapolicyddir = $(sysconfdir)/fapolicyd
 
 dist_fapolicyd_DATA = \
-	fapolicyd.conf \
-	fapolicyd-filter.conf \
-	fapolicyd.trust
+	data/fapolicyd.conf \
+	data/fapolicyd-filter.conf \
+	data/fapolicyd.trust
 
 systemdservicedir = $(systemdsystemunitdir)
-dist_systemdservice_DATA = fapolicyd.service
+dist_systemdservice_DATA = systemd/fapolicyd.service
+
+openrcinitdir = $(sysconfdir)/init.d
+dist_openrcinit_DATA = openrc/init.d/fapolicyd
+openrcconfdir = $(sysconfdir)/conf.d
+dist_openrcconf_DATA = openrc/conf.d/fapolicyd
 
 sbin_SCRIPTS = fagenrules
 
@@ -24,7 +31,7 @@ completiondir = $(sysconfdir)/bash_completion.d/
 dist_completion_DATA = fapolicyd.bash_completion
 
 MAGIC = fapolicyd-magic.mgc
-pkgdata_DATA = ${MAGIC} 
+pkgdata_DATA = ${MAGIC}
 CLEANFILES = ${MAGIC}
 
 ${MAGIC}: $(EXTRA_DIST)
