--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -80,4 +80,10 @@ deb_test_SOURCES = \
   ${top_srcdir}/src/library/deb-backend.c
 endif
 
+if WITH_EBUILD
+check_PROGRAMS += ebuild_test
+ebuild_test_SOURCES = ebuild_test.c
+ebuild_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
+endif
+
 TESTS = $(check_PROGRAMS)
