--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -19,3 +19,4 @@ integrity = none
 syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype,trust
 rpm_sha256_only = 0
 allow_filesystem_mark = 0
+report_interval = 0
