Path trimmer option

--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -20,3 +20,4 @@ syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype,trust
 rpm_sha256_only = 0
 allow_filesystem_mark = 0
 report_interval = 0
+path_trimmer = $
