--- a/.github/workflows/rockylinux9.yml
+++ b/.github/workflows/rockylinux9.yml
@@ -2,9 +2,11 @@ name: rockylinux9-build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ main ]
+    branches:
+      - '*'
 
 jobs:
   build:
